--- a/app/app/templates/dashboard.component.html
+++ b/app/app/templates/dashboard.component.html
@@ -3,11 +3,36 @@
     <div class="dashboard__head">
 
         <h1 class="dashboard__logo" *ngIf="data[ 'view' ]">
-            <svg  x="0px" y="0px" viewBox="0 0 302 302">
-                <style type="text/css">
-                    .st0{fill:#5C89C7 ;}
-                </style>
-                <path class="st0" d="M151,45c58.4,0,106,47.6,106,106s-47.6,106-106,106S45,209.4,45,151S92.6,45,151,45 M151,0C67.6,0,0,67.6,0,151c0,83.4,67.6,151,151,151c83.4,0,151-67.6,151-151C302,67.6,234.4,0,151,0L151,0z"/>
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 90 54.7" style="enable-background:new 0 0 90 54.7;" xml:space="preserve">
+            <style type="text/css">
+                .st0{fill:#FFFFFF ;}
+            </style>
+            <path class="st0" d="M80,20L80,20V0H60v10h10v10H60v10h30V20H80z M60,20V10H50V0H40v10H30v10h10v10h10V20H60z M30,20v10H0V20h10V10
+                H0V0h20v20H30z"/>
+            <g>
+                <path class="st0" d="M17.7,44.2c0.5-0.2,1-0.4,1.6-0.6c1.5-0.4,3-0.3,4.2,0.8c0.7,0.6,1.3,0.5,2,0.1c1.7-1.2,3.7-1.3,5.6-0.6
+                    c2,0.8,3.4,2.7,3.4,4.9c0,1.8,0,3.6,0,5.4c0,0.3-0.1,0.4-0.3,0.4c-0.7,0-1.5,0-2.2,0c-0.3,0-0.4-0.1-0.4-0.4c0-1.6,0-3.3,0-5
+                    c0-1.2-0.5-2.3-1.7-2.8c-1.4-0.7-3.2,0.3-3.5,1.9c-0.1,0.4-0.1,0.7-0.1,1.1c0,1.5,0,3.1,0,4.6c0,0.4-0.1,0.5-0.5,0.4
+                    c-0.8,0-1.6,0-2.4,0c-0.4,0-0.5-0.1-0.5-0.5c0-2,0-3.9,0-5.9c0-0.4-0.1-0.7-0.4-1c-0.6-0.7-1.7-1.1-2.6-0.9c-1.1,0.3-1.8,1-2,2.2
+                    c-0.1,0.7-0.1,1.4-0.1,2.1c0,1.2,0,2.3,0,3.5c0,0.3-0.1,0.4-0.4,0.4c-0.9,0-1.8,0-2.6,0c-0.3,0-0.4-0.1-0.4-0.4c0-3.4,0-6.8,0-10.1
+                    c0-0.3,0.1-0.4,0.4-0.4c0.7,0,1.4,0,2.1,0c0.4,0,0.6,0.1,0.5,0.5C17.6,44.1,17.6,44.2,17.7,44.2z"/>
+                <path class="st0" d="M55.2,44.5c0-2.1,0-4.2,0-6.4c0.4,0,0.7,0,1.1,0c0.6,0,1.1,0,1.7,0c0.2,0,0.3,0.1,0.3,0.3c0,0.1,0,0.2,0,0.2
+                    c0,5.1,0,10.2,0,15.4c0,0.5,0,0.5-0.5,0.5c-0.8,0-1.6,0-2.5,0c0-0.2,0-0.4-0.1-0.6c-1.7,0.9-3.4,1.1-5.1,0.4
+                    c-1.1-0.4-1.9-1.1-2.5-2.1c-1.3-2.1-1.1-4.8,0.5-6.6C49.8,43.5,52.2,43.2,55.2,44.5z M52.3,46.4c-1.5,0-2.8,1.3-2.8,2.8
+                    c0,1.5,1.3,2.8,2.8,2.8c1.5,0,2.8-1.3,2.8-2.8C55.1,47.7,53.8,46.4,52.3,46.4z"/>
+                <path class="st0" d="M72.3,44.4c0-0.1,0-0.1,0-0.2c0.1-0.7,0.1-0.7,0.7-0.7c0.6,0,1.2,0,1.8,0c0.5,0,0.5,0,0.5,0.5
+                    c0,2.1,0,4.1,0,6.2c0,1.2,0,2.5,0,3.7c0,0.4-0.1,0.5-0.5,0.5c-0.6,0-1.3,0-1.9,0c-0.6,0-0.6,0-0.7-0.6c-3.2,1.4-6,1-7.9-2.2
+                    c-1.2-2-0.7-4.6,0.9-6.4C67,43.5,69.4,43.2,72.3,44.4z M66.6,49.2c0,1.5,1.3,2.8,2.8,2.8c1.5,0,2.8-1.3,2.8-2.8
+                    c0-1.5-1.3-2.8-2.8-2.8C67.9,46.4,66.6,47.7,66.6,49.2z"/>
+                <path class="st0" d="M45.9,49.9c-2.7,0-5.4,0-8.1,0c0.1,0.7,0.5,1.1,0.9,1.5c1.2,0.9,2.8,0.7,3.8-0.4c0.1-0.1,0.2-0.2,0.3-0.2
+                    c0.9,0,1.9,0,2.8,0c-0.5,2.2-2.8,4.2-5.8,3.9c-3.4-0.3-5.3-3.1-5.1-5.9c0.3-3.5,3.2-5.4,6.1-5.1C44.2,44,46.3,46.7,45.9,49.9z
+                     M38.1,47.7c1.5,0,3,0,4.6,0c-0.6-0.9-1.4-1.3-2.4-1.2C39.4,46.5,38.7,46.8,38.1,47.7z"/>
+                <path class="st0" d="M59.6,43.6c0.9,0,1.9,0,2.8,0c0.1,0,0.2,0.1,0.2,0.2c0,0.1,0,0.2,0,0.2c0,3.3,0,6.6,0,9.9
+                    c0,0.4-0.1,0.5-0.5,0.5c-0.7,0-1.5,0-2.2,0c-0.2,0-0.3,0-0.3-0.3c0-3.5,0-6.9,0-10.4C59.5,43.8,59.6,43.7,59.6,43.6z"/>
+                <path class="st0" d="M61.1,42.8c-0.4,0-0.8,0-1.2,0c-0.2,0-0.3-0.1-0.3-0.3c0-0.6,0-1.2,0-1.8c0-0.2,0.1-0.3,0.3-0.3
+                    c0.8,0,1.6,0,2.4,0c0.2,0,0.3,0.1,0.3,0.3c0,0.6,0,1.2,0,1.8c0,0.3-0.1,0.4-0.4,0.3C61.8,42.8,61.4,42.8,61.1,42.8z"/>
+            </g>
             </svg>
         </h1>
 
