--- a/app/app/templates/main.menu.component.html
+++ b/app/app/templates/main.menu.component.html
@@ -1,7 +1,7 @@
 <nav class="main-menu">
 
     <a routerLink="{{ item.url }}" *ngFor="let item of content"
-       [class.active]="data[ 'active_menu' ] == item.url">
+       [class.active]="data[ 'active_menu' ].substr(1) == item.url.split('/')[1]">
 
         <i [innerHTML]="item.icon"></i>
         {{ item.text }}
