--- a/app/app/templates/new.component.html
+++ b/app/app/templates/new.component.html
@@ -1,1 +1,84 @@
-<div class="new"></div>
+<!-- new -->
+<div class="new">
+
+    <!-- new__title -->
+    <h1 class="new__title">Новинки</h1>
+    <!-- /new__title -->
+
+    <!-- new__wrap -->
+    <div class="new__wrap">
+
+        <!-- new__item -->
+        <div class="new__item">
+
+            <!-- new__thumbnail -->
+            <a href="#" class="new__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
+            <!-- /new__thumbnail -->
+
+            <!-- new__description -->
+            <div class="new__description">
+
+                <!-- new__description-title -->
+                <a href="#" class="new__description-title">Текст текст текст</a>
+                <!-- /new__description-title -->
+
+                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+                    текст текст текст текст текст текст текст текст текст текст</p>
+
+            </div>
+            <!-- /new__description -->
+
+        </div>
+        <!-- /new__item -->
+
+        <!-- new__item -->
+        <div class="new__item">
+
+            <!-- new__thumbnail -->
+            <a href="#" class="new__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
+            <!-- /new__thumbnail -->
+
+            <!-- new__description -->
+            <div class="new__description">
+
+                <!-- new__description-title -->
+                <a href="#" class="new__description-title">Текст текст текст</a>
+                <!-- /new__description-title -->
+
+                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+                    текст текст текст текст текст текст текст текст текст текст</p>
+
+            </div>
+            <!-- /new__description -->
+
+        </div>
+        <!-- /new__item -->
+
+        <!-- new__item -->
+        <div class="new__item">
+
+            <!-- new__thumbnail -->
+            <a href="#" class="new__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
+            <!-- /new__thumbnail -->
+
+            <!-- new__description -->
+            <div class="new__description">
+
+                <!-- new__description-title -->
+                <a href="#" class="new__description-title">Текст текст текст</a>
+                <!-- /new__description-title -->
+
+                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+                    текст текст текст текст текст текст текст текст текст текст</p>
+
+            </div>
+            <!-- /new__description -->
+
+        </div>
+        <!-- /new__item -->
+
+    </div>
+    <!-- /new__wrap -->
+
+</div>
+<!-- /new -->
