--- a/app/app/templates/new.component.html
+++ b/app/app/templates/new.component.html
@@ -1,5 +1,5 @@
 <!-- new -->
-<div class="new">
+<div class="new" perfectScroll>
 
     <!-- new__title -->
     <h1 class="new__title">Новинки</h1>
