--- a/app/app/templates/new.component.html
+++ b/app/app/templates/new.component.html
@@ -25,51 +25,20 @@
                 <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
                     текст текст текст текст текст текст текст текст текст текст</p>
 
-            </div>
-            <!-- /new__description -->
-
-        </div>
-        <!-- /new__item -->
-
-        <!-- new__item -->
-        <div class="new__item">
-
-            <!-- new__thumbnail -->
-            <a href="#" class="new__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
-            <!-- /new__thumbnail -->
-
-            <!-- new__description -->
-            <div class="new__description">
-
-                <!-- new__description-title -->
-                <a href="#" class="new__description-title">Текст текст текст</a>
-                <!-- /new__description-title -->
-
-                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
-                    текст текст текст текст текст текст текст текст текст текст</p>
-
-            </div>
-            <!-- /new__description -->
-
-        </div>
-        <!-- /new__item -->
-
-        <!-- new__item -->
-        <div class="new__item">
-
-            <!-- new__thumbnail -->
-            <a href="#" class="new__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
-            <!-- /new__thumbnail -->
-
-            <!-- new__description -->
-            <div class="new__description">
-
-                <!-- new__description-title -->
-                <a href="#" class="new__description-title">Текст текст текст</a>
-                <!-- /new__description-title -->
-
-                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
-                    текст текст текст текст текст текст текст текст текст текст</p>
+                <!-- new__views -->
+                <div class="new__views">
+                    
+                </div>
+                <!-- /new__views -->
+                
+                <!-- new__friends -->
+                <dl class="new__friends">
+                    <dt>36 друзей смотрели это видео</dt>
+                    <dd>
+                        <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
+                    </dd>
+                </dl>
+                <!-- /new__friends -->
 
             </div>
             <!-- /new__description -->
