--- a/app/app/sass/new.scss
+++ b/app/app/sass/new.scss
@@ -36,17 +36,54 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    font-size: 15px;
+    color: #8b8b8b;
 
     &-title {
       display: block;
-      color: #000;
+      color: #8b8b8b;
       font-size: 20px;
       line-height: 24px;
+
+      &:hover { text-decoration: underline }
     }
 
     p {
-      font-size: 12px;
-      line-height: 16px;
+      font-size: 15px;
+      line-height: 18px;
+    }
+  }
+
+  &__views {
+
+  }
+
+  &__friends {
+    font-size: 15px;
+    line-height: 18px;
+
+    dt {
+
+    }
+
+    dd {
+
+    }
+
+    &-item {
+      overflow: hidden;
+      display: inline-block;
+      vertical-align: top;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+
+      img {
+        display: block;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+      }
     }
   }
 }
