--- a/app/app/templates/new.component.html
+++ b/app/app/templates/new.component.html
@@ -36,6 +36,10 @@
                     <dt>36 друзей смотрели это видео</dt>
                     <dd>
                         <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
+                        <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
+                        <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
+                        <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
+                        <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
                     </dd>
                 </dl>
                 <!-- /new__friends -->
@@ -48,6 +52,37 @@
 
     </div>
     <!-- /new__wrap -->
+
+    <!-- chat -->
+    <div class="chat">
+
+        <!-- chat__list -->
+        <div class="chat__list">
+
+            <!-- chat__item -->
+            <div class="chat__item">
+                <div class="chat__pic"><img width="50" height="50" alt="" src="/app/pic/new1.jpg"></div>
+                <div class="chat__wrap">
+                    <div class="chat__head">
+                        <strong class="chat__user">User Nmae</strong>
+                        <time date-time="03-04-2017">04.03.2017</time>
+                    </div>
+                    Comment comment comment
+                </div>
+            </div>
+            <!-- /chat__item -->
+
+        </div>
+        <!-- /chat__list -->
+
+        <!-- chat__add -->
+        <form action="#" class="chat__add">
+            <textarea placeholder="Добавить комментарий"></textarea>
+        </form>
+        <!-- /chat__add -->
+
+    </div>
+    <!-- /chat -->
 
 </div>
 <!-- /new -->
