--- a/app/app/sass/_chat.scss
+++ b/app/app/sass/_chat.scss
@@ -5,7 +5,7 @@
   position: relative;
   height: 60vh;
   min-height: 300px;
-  margin: 20px 0;
+  margin: 20px 0 100px;
 
   &__add {
     display: flex;
