--- a/app/app/sass/new.scss
+++ b/app/app/sass/new.scss
@@ -6,6 +6,7 @@
   &__title {
     margin-bottom: 15px;
     font-size: 30px;
+    color: #585d6b;
   }
 
   &__wrap {
@@ -41,7 +42,7 @@
 
     &-title {
       display: block;
-      color: #8b8b8b;
+      color: #585d6b;
       font-size: 20px;
       line-height: 24px;
 
