--- a/app/app/templates/user.panel.component.html
+++ b/app/app/templates/user.panel.component.html
@@ -3,7 +3,7 @@
 
     <!--user-panel__avatar-->
     <div class="user-panel__avatar" *ngIf="data[ 'view' ] > 0">
-        <div style="background-image: url('app/pic/user-avatar.png')"></div>
+        <img src="{{ data[ 'me' ][ 'image' ] }}" alt="">
     </div>
     <!--/user-panel__avatar-->
 
