--- a/app/app/templates/new.component.html
+++ b/app/app/templates/new.component.html
@@ -12,14 +12,14 @@
         <div class="new__item">
 
             <!-- new__thumbnail -->
-            <a href="#" class="new__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
+            <a class="new__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
             <!-- /new__thumbnail -->
 
             <!-- new__description -->
             <div class="new__description">
 
                 <!-- new__description-title -->
-                <a href="#" class="new__description-title">Текст текст текст</a>
+                <a class="new__description-title">Текст текст текст</a>
                 <!-- /new__description-title -->
 
                 <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
@@ -35,11 +35,11 @@
                 <dl class="new__friends">
                     <dt>36 друзей смотрели это видео</dt>
                     <dd>
-                        <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
-                        <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
-                        <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
-                        <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
-                        <a href="#" class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></a>
+                        <span class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="new__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
                     </dd>
                 </dl>
                 <!-- /new__friends -->
@@ -57,7 +57,7 @@
     <div class="chat">
 
         <!-- chat__list -->
-        <div class="chat__list">
+        <div class="chat__list" perfectScroll>
 
             <!-- chat__item -->
             <div class="chat__item">
@@ -65,7 +65,33 @@
                 <div class="chat__wrap">
                     <div class="chat__head">
                         <strong class="chat__user">User Nmae</strong>
-                        <time date-time="03-04-2017">04.03.2017</time>
+                        <time attr.datetime="{{1488648771 | time: true}}">{{1488648771 | time: false}}</time>
+                    </div>
+                    Comment comment comment
+                </div>
+            </div>
+            <!-- /chat__item -->
+
+            <!-- chat__item -->
+            <div class="chat__item">
+                <div class="chat__pic"><img width="50" height="50" alt="" src="/app/pic/new1.jpg"></div>
+                <div class="chat__wrap">
+                    <div class="chat__head">
+                        <strong class="chat__user">User Nmae</strong>
+                        <time attr.datetime="{{1488562460 | time: true}}">{{1488562460 | time: false}}</time>
+                    </div>
+                    Comment comment comment
+                </div>
+            </div>
+            <!-- /chat__item -->
+
+            <!-- chat__item -->
+            <div class="chat__item">
+                <div class="chat__pic"><img width="50" height="50" alt="" src="/app/pic/new1.jpg"></div>
+                <div class="chat__wrap">
+                    <div class="chat__head">
+                        <strong class="chat__user">User Nmae</strong>
+                        <time attr.datetime="{{1488476060 | time: true}}">{{1488476060 | time: false}}</time>
                     </div>
                     Comment comment comment
                 </div>
@@ -78,6 +104,7 @@
         <!-- chat__add -->
         <form action="#" class="chat__add">
             <textarea placeholder="Добавить комментарий"></textarea>
+            <button type="submit">Send</button>
         </form>
         <!-- /chat__add -->
 
