replace class name new to trends

--- a/app/app/templates/trends.component.html
+++ b/app/app/templates/trends.component.html
@@ -1,1 +1,115 @@
-<div class="trends"></div>
+<!-- trends -->
+<div class="trends" perfectScroll>
+
+    <!-- trends__title -->
+    <h1 class="trends__title">Новинки</h1>
+    <!-- /trends__title -->
+
+    <!-- trends__wrap -->
+    <div class="trends__wrap">
+
+        <!-- trends__item -->
+        <div class="trends__item">
+
+            <!-- trends__thumbnail -->
+            <a class="trends__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
+            <!-- /trends__thumbnail -->
+
+            <!-- trends__description -->
+            <div class="trends__description">
+
+                <!-- trends__description-title -->
+                <a class="trends__description-title">Текст текст текст</a>
+                <!-- /trends__description-title -->
+
+                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+                    текст текст текст текст текст текст текст текст текст текст</p>
+
+                <!-- trends__views -->
+                <div class="trends__views">
+
+                </div>
+                <!-- /trends__views -->
+
+                <!-- trends__friends -->
+                <dl class="trends__friends">
+                    <dt>36 друзей смотрели это видео</dt>
+                    <dd>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                    </dd>
+                </dl>
+                <!-- /trends__friends -->
+
+            </div>
+            <!-- /trends__description -->
+
+        </div>
+        <!-- /trends__item -->
+
+    </div>
+    <!-- /trends__wrap -->
+
+    <!-- chat -->
+    <div class="chat">
+
+        <!-- chat__list -->
+        <div class="chat__list" perfectScroll>
+
+            <!-- chat__item -->
+            <div class="chat__item">
+                <div class="chat__pic"><img width="50" height="50" alt="" src="/app/pic/new1.jpg"></div>
+                <div class="chat__wrap">
+                    <div class="chat__head">
+                        <strong class="chat__user">User Nmae</strong>
+                        <time attr.datetime="{{1488648771 | time: true}}">{{1488648771 | time: false}}</time>
+                    </div>
+                    Comment comment comment
+                </div>
+            </div>
+            <!-- /chat__item -->
+
+            <!-- chat__item -->
+            <div class="chat__item">
+                <div class="chat__pic"><img width="50" height="50" alt="" src="/app/pic/new1.jpg"></div>
+                <div class="chat__wrap">
+                    <div class="chat__head">
+                        <strong class="chat__user">User Nmae</strong>
+                        <time attr.datetime="{{1488562460 | time: true}}">{{1488562460 | time: false}}</time>
+                    </div>
+                    Comment comment comment
+                </div>
+            </div>
+            <!-- /chat__item -->
+
+            <!-- chat__item -->
+            <div class="chat__item">
+                <div class="chat__pic"><img width="50" height="50" alt="" src="/app/pic/new1.jpg"></div>
+                <div class="chat__wrap">
+                    <div class="chat__head">
+                        <strong class="chat__user">User Nmae</strong>
+                        <time attr.datetime="{{1488476060 | time: true}}">{{1488476060 | time: false}}</time>
+                    </div>
+                    Comment comment comment
+                </div>
+            </div>
+            <!-- /chat__item -->
+
+        </div>
+        <!-- /chat__list -->
+
+        <!-- chat__add -->
+        <form action="#" class="chat__add">
+            <textarea placeholder="Добавить комментарий"></textarea>
+            <button type="submit">Send</button>
+        </form>
+        <!-- /chat__add -->
+
+    </div>
+    <!-- /chat -->
+
+</div>
+<!-- /trends -->
