--- a/app/app/templates/trends.component.html
+++ b/app/app/templates/trends.component.html
@@ -9,6 +9,258 @@
     <div class="trends__wrap">
 
         <!-- trends__item -->
+        <div class="trends__item" (mouseenter)="enter($event)" (mouseleave)="leave($event)">
+
+            <!-- trends__thumbnail -->
+            <a class="trends__thumbnail" [ngClass]=className style="background-image: url(app/pic/new1.jpg)"></a>
+            <!-- /trends__thumbnail -->
+
+            <!-- trends__description -->
+            <div class="trends__description">
+
+                <!-- trends__description-title -->
+                <a class="trends__description-title">Текст текст текст</a>
+                <!-- /trends__description-title -->
+
+                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+                    текст текст текст текст текст текст текст текст текст текст</p>
+
+                <!-- trends__views -->
+                <div class="trends__views">
+
+                </div>
+                <!-- /trends__views -->
+
+                <!-- trends__friends -->
+                <dl class="trends__friends">
+                    <dt>36 друзей смотрели это видео</dt>
+                    <dd>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                    </dd>
+                </dl>
+                <!-- /trends__friends -->
+
+            </div>
+            <!-- /trends__description -->
+
+        </div>
+        <!-- /trends__item -->
+
+        <!-- trends__item -->
+        <div class="trends__item">
+
+            <!-- trends__thumbnail -->
+            <a class="trends__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
+            <!-- /trends__thumbnail -->
+
+            <!-- trends__description -->
+            <div class="trends__description">
+
+                <!-- trends__description-title -->
+                <a class="trends__description-title">Текст текст текст</a>
+                <!-- /trends__description-title -->
+
+                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+                    текст текст текст текст текст текст текст текст текст текст</p>
+
+                <!-- trends__views -->
+                <div class="trends__views">
+
+                </div>
+                <!-- /trends__views -->
+
+                <!-- trends__friends -->
+                <dl class="trends__friends">
+                    <dt>36 друзей смотрели это видео</dt>
+                    <dd>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                    </dd>
+                </dl>
+                <!-- /trends__friends -->
+
+            </div>
+            <!-- /trends__description -->
+
+        </div>
+        <!-- /trends__item -->
+
+        <!-- trends__item -->
+        <div class="trends__item">
+
+            <!-- trends__thumbnail -->
+            <a class="trends__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
+            <!-- /trends__thumbnail -->
+
+            <!-- trends__description -->
+            <div class="trends__description">
+
+                <!-- trends__description-title -->
+                <a class="trends__description-title">Текст текст текст</a>
+                <!-- /trends__description-title -->
+
+                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+                    текст текст текст текст текст текст текст текст текст текст</p>
+
+                <!-- trends__views -->
+                <div class="trends__views">
+
+                </div>
+                <!-- /trends__views -->
+
+                <!-- trends__friends -->
+                <dl class="trends__friends">
+                    <dt>36 друзей смотрели это видео</dt>
+                    <dd>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                    </dd>
+                </dl>
+                <!-- /trends__friends -->
+
+            </div>
+            <!-- /trends__description -->
+
+        </div>
+        <!-- /trends__item -->
+
+        <!-- trends__item -->
+        <div class="trends__item">
+
+            <!-- trends__thumbnail -->
+            <a class="trends__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
+            <!-- /trends__thumbnail -->
+
+            <!-- trends__description -->
+            <div class="trends__description">
+
+                <!-- trends__description-title -->
+                <a class="trends__description-title">Текст текст текст</a>
+                <!-- /trends__description-title -->
+
+                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+                    текст текст текст текст текст текст текст текст текст текст</p>
+
+                <!-- trends__views -->
+                <div class="trends__views">
+
+                </div>
+                <!-- /trends__views -->
+
+                <!-- trends__friends -->
+                <dl class="trends__friends">
+                    <dt>36 друзей смотрели это видео</dt>
+                    <dd>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                    </dd>
+                </dl>
+                <!-- /trends__friends -->
+
+            </div>
+            <!-- /trends__description -->
+
+        </div>
+        <!-- /trends__item -->
+
+        <!-- trends__item -->
+        <div class="trends__item">
+
+            <!-- trends__thumbnail -->
+            <a class="trends__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
+            <!-- /trends__thumbnail -->
+
+            <!-- trends__description -->
+            <div class="trends__description">
+
+                <!-- trends__description-title -->
+                <a class="trends__description-title">Текст текст текст</a>
+                <!-- /trends__description-title -->
+
+                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+                    текст текст текст текст текст текст текст текст текст текст</p>
+
+                <!-- trends__views -->
+                <div class="trends__views">
+
+                </div>
+                <!-- /trends__views -->
+
+                <!-- trends__friends -->
+                <dl class="trends__friends">
+                    <dt>36 друзей смотрели это видео</dt>
+                    <dd>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                    </dd>
+                </dl>
+                <!-- /trends__friends -->
+
+            </div>
+            <!-- /trends__description -->
+
+        </div>
+        <!-- /trends__item -->
+
+        <!-- trends__item -->
+        <div class="trends__item">
+
+            <!-- trends__thumbnail -->
+            <a class="trends__thumbnail" style="background-image: url(app/pic/new1.jpg)"></a>
+            <!-- /trends__thumbnail -->
+
+            <!-- trends__description -->
+            <div class="trends__description">
+
+                <!-- trends__description-title -->
+                <a class="trends__description-title">Текст текст текст</a>
+                <!-- /trends__description-title -->
+
+                <p>Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+                    текст текст текст текст текст текст текст текст текст текст</p>
+
+                <!-- trends__views -->
+                <div class="trends__views">
+
+                </div>
+                <!-- /trends__views -->
+
+                <!-- trends__friends -->
+                <dl class="trends__friends">
+                    <dt>36 друзей смотрели это видео</dt>
+                    <dd>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                        <span class="trends__friends-item"><img src="/app/pic/new1.jpg" alt=""></span>
+                    </dd>
+                </dl>
+                <!-- /trends__friends -->
+
+            </div>
+            <!-- /trends__description -->
+
+        </div>
+        <!-- /trends__item -->
+
+        <!-- trends__item -->
         <div class="trends__item">
 
             <!-- trends__thumbnail -->
