--- a/app/app/sass/_user-panel.scss
+++ b/app/app/sass/_user-panel.scss
@@ -1,4 +1,3 @@
-
 .user-panel {
   position: absolute;
   top: 0;
@@ -434,6 +433,17 @@
 
       div {
         @include absolutePosition();
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-position: center;
+        background-size: cover;
+      }
+
+      img {
+        @include absolutePosition();
+        width: 100%;
+        height: 100%;
         border-radius: 50%;
         background-position: center;
         background-size: cover;
