--- a/app/app/sass/_mobile-menu.scss
+++ b/app/app/sass/_mobile-menu.scss
@@ -206,7 +206,7 @@
       -webkit-transform: rotate(-45deg);
       transform: rotate(-45deg);
     }
-    a {
+    > div {
       position: absolute;
       display: flex;
       align-items: center;
