--- a/app/app/templates/trends.component.html
+++ b/app/app/templates/trends.component.html
@@ -2,7 +2,7 @@
 <div class="trends" perfectScroll>
 
     <!-- trends__title -->
-    <h1 class="trends__title">Новинки</h1>
+    <h1 class="trends__title">{{title}}</h1>
     <!-- /trends__title -->
 
     <!-- trends__wrap -->
